# thoughtfuldata.github.io

./: README.md  pyproject.toml  ungue55able.html
HW1-LA-ungue55able/: 404.html  HW1-LA.html  HW1.docx  index.html  script.js  web.css
HW2-Blood-Pressure/: app.py  model.py
HW2-Blood-Pressure-ungue55able/: SBP.csv  app.py  model.py  regr.pkl
HW2-Blood-Pressure/templates/: index.html
HW3-MERN/server/: config.env  server-2.js  server.js
HW3-MERN/variation1/components/: create.js  edit.js  recordList.js
HW3-MERN/variation1/routes/: record.js
HW3-MERN/variation2/: App-2.js
HW4-Flutter/: HW4.html
