[tool.poetry]
name = "thoughtfuldata.github.io"
version = "0.1.0"
description = ""
authors = ["Manny <manny881@zoho.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
bandit = "^1.7.3"
flake8 = "^4.0.1"
black = "^22.1.0"
joblib = "^1.1.0"
pandas = "^1.4.1"
scikit-learn = "0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
